syntax = "proto3";

package user;

option java_multiple_files = true;
option java_package = "com.example.grpc.user";
option java_outer_classname = "UserProto";
option go_package = "my-go-postgres-project/proto";

// User service definition
service UserService {
  // Get user by ID
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
  
  // List all users
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {}
  
  // Create a new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  
  // Update an existing user
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  
  // Delete a user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

// Request to get a single user by ID
message GetUserRequest {
  int32 id = 1;
}

// Request to list users
message ListUsersRequest {
  // Optional pagination parameters
  int32 page_size = 1;
  int32 page_number = 2;
}

// Response containing a list of users
message ListUsersResponse {
  repeated User users = 1;
  int32 total_count = 2;
}

// Request to create a new user
message CreateUserRequest {
  string username = 1;
  string email = 2;
}

// Request to update an existing user
message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

// Request to delete a user
message DeleteUserRequest {
  int32 id = 1;
}

// Response after deleting a user
message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

// User message that matches the Go struct
message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
}

// Standard response containing a user
message UserResponse {
  User user = 1;
  string error_message = 2;
}